# mybot

./: .env.dev  .gitignore  README.md  bot.py  pyproject.toml
src/plugins/: test2.py
